# SDSS

./: CMakeLists.txt  README.md
src/: all.hpp  fwddec.hpp  handle.hpp  module.cpp  module.hpp  pattern.cpp  pattern.hpp  pattern_batch.cpp  pattern_batch.hpp  range.cpp  range.hpp
